# signals2

./: CMakeLists.txt
include/boost/signals2/: connection.hpp  deconstruct.hpp  deconstruct_ptr.hpp  expired_slot.hpp  last_value.hpp  mutex.hpp  optional_last_value.hpp  postconstructible.hpp  predestructible.hpp  shared_connection_block.hpp  signal.hpp  signal_base.hpp  signal_type.hpp  slot.hpp  slot_base.hpp  trackable.hpp  variadic_signal.hpp
include/boost/signals2/detail/: auto_buffer.hpp  foreign_ptr.hpp  null_output_iterator.hpp  replace_slot_function.hpp  result_type_wrapper.hpp  scope_guard.hpp  signal_template.hpp  signals_common.hpp  signals_common_macros.hpp  slot_call_iterator.hpp  slot_groups.hpp  slot_template.hpp  tracked_objects_visitor.hpp  unique_lock.hpp  variadic_arg_type.hpp  variadic_slot_invoker.hpp
test/: CMakeLists.txt  connection_test.cpp  dead_slot_test.cpp  deconstruct_test.cpp  deletion_test.cpp  invocation_benchmark.cpp  mutex_test.cpp  ordering_test.cpp  regression_test.cpp  shared_connection_block_test.cpp  signal_n_test.cpp  signal_test.cpp  signal_type_test.cpp  signals_vs_signals2_benchmark.cpp  slot_compile_test.cpp  threading_models_test.cpp  track_test.cpp  trackable_test.cpp
